<resources>
    <string name="app_name">Tichu Score Counter</string>

    <string name="team_name_A">Team A</string>
    <string name="team_name_B">Team B</string>
    <string name="team_score_A">0</string>
    <string name="team_score_B">0</string>

    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>

    <string name="btn_tichu">T</string>
    <string name="btn_great_tichu">GT</string>
    <string name="btn_player_out">OUT</string>
    <string name="btn_finish_Round">Runde beenden</string>
    <string name="btn_done">Fertig</string>

    <string name="cb_won_tichu">won Tichu</string>
    <string name="cb_lost_tichu">lost Tichu</string>
    <string name="cb_won_great_tichu">won Great Tichu</string>
    <string name="cb_lost_great_tichu">lost Great Tichu</string>
    <string name="cb_out12">out first and second</string>

    <string name="menu_new_game">New Game</string>
    <string name="menu_set_players">Set Players</string>
    <string name="menu_redo_round">Undo Last Round</string>
    <string name="menu_reset_round">Reset Current Round</string>
    <string name="menu_settings">Settings</string>

    <string name="toast_new_game">New Game started</string>
    <string name="toast_load_game">Score loaded</string>

    <string name="snack_player">Player</string>
    <string name="snack_out">out</string>

    <string name="dialog_card_title">Enter Card Score</string>
</resources>
