<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
    android:id="@+id/player_actionbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/player1_name"
    android:background="@color/player_actionbar_background"
    android:gravity="left"
    android:orientation="horizontal"
    android:padding="@dimen/player_actionbar_padding">

    <Button
        android:layout_width="@dimen/player_action_button_size"
        android:layout_height="@dimen/player_action_button_size"
        android:background="@drawable/player_action_button_background"
        android:text="@string/btn_great_tichu"
        android:onClick="playerSaidGreatTichu"/>

    <Button
        android:layout_width="@dimen/player_action_button_size"
        android:layout_height="@dimen/player_action_button_size"
        android:layout_marginLeft="@dimen/space_between_action_buttons"
        android:layout_marginRight="@dimen/space_between_action_buttons"
        android:background="@drawable/player_action_button_background"
        android:text="@string/btn_tichu" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/player_action_button_size"
        android:background="@drawable/player_action_button_background"
        android:text="@string/btn_player_out" />
    </LinearLayout>
</merge>