<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_round_points"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.jomaway.tichuscorecounter.SetRoundPointsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_name_A"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="center"
            android:textSize="@dimen/team_name_text_size"
            android:textColor="@color/teamA"/>

        <NumberPicker
            android:id="@+id/teamA_numberPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:layout_marginBottom="@dimen/np_margin_bottom"/>

        <CheckBox
            android:id="@+id/teamA_wonT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_won_tichu" />
        <CheckBox
            android:id="@+id/teamA_lostT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_lost_tichu" />
        <CheckBox
            android:id="@+id/teamA_wonGT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_won_great_tichu" />
        <CheckBox
            android:id="@+id/teamA_lostGT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_lost_great_tichu" />
        <CheckBox
            android:id="@+id/teamA_out12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_out12" />

    </LinearLayout>

    <View
        android:layout_width="@dimen/line_width"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_name_B"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="center"
            android:textSize="@dimen/team_name_text_size"
            android:textColor="@color/teamB"/>
        <NumberPicker
            android:id="@+id/teamB_numberPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:layout_marginBottom="@dimen/np_margin_bottom"/>

        <CheckBox
            android:id="@+id/teamB_wonT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_won_tichu"/>
        <CheckBox
            android:id="@+id/teamB_lostT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_lost_tichu" />
        <CheckBox
            android:id="@+id/teamB_wonGT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_won_great_tichu" />
        <CheckBox
            android:id="@+id/teamB_lostGT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_lost_great_tichu" />
        <CheckBox
            android:id="@+id/teamB_out12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_out12" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:onClick="done"/>

    </LinearLayout>

</LinearLayout>