<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_players"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.jomaway.tichuscorecounter.SetPlayersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/player_1"
            android:textColor="@color/teamA" />

        <EditText
            android:id="@+id/player1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_edit_marginBottom"
            android:padding="@dimen/player_edit_padding"
            android:text="@string/player_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/player_2"
            android:textColor="@color/teamB" />

        <EditText
            android:id="@+id/player2_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_edit_marginBottom"
            android:padding="@dimen/player_edit_padding"
            android:text="@string/player_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/player_3"
            android:textColor="@color/teamA" />

        <EditText
            android:id="@+id/player3_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_edit_marginBottom"
            android:padding="@dimen/player_edit_padding"
            android:text="@string/player_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/player_4"
            android:textColor="@color/teamB" />

        <EditText
            android:id="@+id/player4_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_edit_marginBottom"
            android:padding="@dimen/player_edit_padding"
            android:text="@string/player_4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_for_layout_weight"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="done"
            android:text="@string/btn_done" />
    </LinearLayout>
</ScrollView>
