<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_card_title"
        android:textSize="22sp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_marginBottom="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/team_name_A"
                android:textAlignment="center"
                android:textColor="@color/teamA"
                android:textSize="@dimen/team_name_text_size" />

            <NumberPicker
                android:id="@+id/teamA_numberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/np_margin_bottom"
                android:descendantFocusability="blocksDescendants" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/team_name_B"
                android:textAlignment="center"
                android:textColor="@color/teamB"
                android:textSize="@dimen/team_name_text_size" />

            <NumberPicker
                android:id="@+id/teamB_numberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/np_margin_bottom"
                android:descendantFocusability="blocksDescendants" />


            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:onClick="done"
                android:text="@string/btn_done" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>